--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,8 @@
-*{
-  
-  margin: 0;  /* add this rule so that all our later margins are exactly how we want them*/
+  *{
+  margin: 0;  /* add this rule so that all our later margins are exactly how we want them, get a completely fresh start*/
+  }
 
-}
+  /* this says that no matter how big our container (screen) is, make sure the Instagram word logo stays the same, don't make it looked stretched, etc */ 
+  .app_headerImage {
+    object-fit:contain; 
+  }
