--- a/src/Post.css
+++ b/src/Post.css
@@ -1,7 +1,8 @@
 .post {
     background-color: white; 
     max-width: 500px; 
-    border: 1px solid lightgray; 
+    border: 1px solid lightgray;
+    margin-bottom: 45px;     /* give some space between the posts */
 }
 
 .post_Image{
